--- a/EJDAWeb/WebContent/SpryAssets/SpryMenuBarHorizontal.css
+++ b/EJDAWeb/WebContent/SpryAssets/SpryMenuBarHorizontal.css
@@ -16,7 +16,8 @@ ul.MenuBarHorizontal
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
-	font-size: 100%;
+	font-family:  Tahoma, Geneva, sans-serif;
+	font-size: 9pt;
 	cursor: default;
 	width: auto;
 }
@@ -31,15 +32,13 @@ ul.MenuBarHorizontal li
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
-	font-size: 12px;
+	font-family:  Tahoma, Geneva, sans-serif;
+	font-size: 9pt;
 	position: relative;
 	text-align: left;
 	cursor: pointer;
-	width: 8em;
+	width: 13em;
 	float: left;
-	font-family: Tahoma, Geneva, sans-serif;
-	font-style: normal;
-	color: #009;
 }
 /* Submenus should appear below their parent (top: 0) with a higher z-index, but they are initially off the left side of the screen (-1000em) */
 ul.MenuBarHorizontal ul
@@ -47,10 +46,11 @@ ul.MenuBarHorizontal ul
 	margin: 0;
 	padding: 0;
 	list-style-type: none;
-	font-size: 12px;
+	font-family:  Tahoma, Geneva, sans-serif;
+	font-size: 9pt;
 	z-index: 1020;
 	cursor: default;
-	width: 8.2em;
+	width: 13em;
 	position: absolute;
 	left: -1000em;
 }
@@ -62,7 +62,7 @@ ul.MenuBarHorizontal ul.MenuBarSubmenuVisible
 /* Menu item containers are same fixed width as parent */
 ul.MenuBarHorizontal ul li
 {
-	width: 8.2em;
+	width: 13em;
 }
 /* Submenus should appear slightly overlapping to the right (95%) and up (-5%) */
 ul.MenuBarHorizontal ul ul
@@ -102,11 +102,7 @@ ul.MenuBarHorizontal a
 ul.MenuBarHorizontal a:hover, ul.MenuBarHorizontal a:focus
 {
 	background-color: #33C;
-	color: #009;
-	font-family: Tahoma, Geneva, sans-serif;
-	font-size: 12px;
-	font-style: normal;
-	line-height: normal;
+	color: #FFF;
 }
 /* Menu items that are open with submenus are set to MenuBarItemHover with a blue background and white text */
 ul.MenuBarHorizontal a.MenuBarItemHover, ul.MenuBarHorizontal a.MenuBarItemSubmenuHover, ul.MenuBarHorizontal a.MenuBarSubmenuVisible
@@ -127,10 +123,6 @@ ul.MenuBarHorizontal a.MenuBarItemSubmenu
 	background-image: url(SpryMenuBarDown.gif);
 	background-repeat: no-repeat;
 	background-position: 95% 50%;
-	font-family: Tahoma, Geneva, sans-serif;
-	font-size: 12px;
-	font-style: normal;
-	color: #009;
 }
 /* Menu items that have a submenu have the class designation MenuBarItemSubmenu and are set to use a background image positioned on the far left (95%) and centered vertically (50%) */
 ul.MenuBarHorizontal ul a.MenuBarItemSubmenu
@@ -172,8 +164,8 @@ ul.MenuBarHorizontal iframe
 {
 	ul.MenuBarHorizontal li.MenuBarItemIE
 	{
-	display: inline;
-	f\loat: right;
-	background: #FFF;
+		display: inline;
+		f\loat: left;
+		background: #FFF;
 	}
 }
